Увеличена ширина карточек на странице администратор222

--- a/templates/base.html
+++ b/templates/base.html
@@ -12,8 +12,7 @@
     <!-- Navigation Bar -->
     <nav class="navbar">
         <div class="logo">Portal</div>
-        <span style="font-size: 14px; color: #555;">© Автор: Байболатова Гүлсезім & Жакин Айбек</span>
-        <span style="font-size: 14px; color: #555;">ВТКО 401</span>
+        <span style="font-size: 14px; color: #555;">© Автор: Байболатова Гүлсезім & Жакин Айбек, ВТКО 401</span>
         <ul class="nav-links">
             {% if session['role'] == 'admin' %}
                 <li><a href="/admin">Заявки</a></li>
