--- a/templates/base.html
+++ b/templates/base.html
@@ -39,7 +39,7 @@
 
     <!-- Footer -->
     <footer style="background-color: #f1f1f1; padding: 15px 20px; text-align: center; font-size: 14px; color: #555;">
-        <p>© {{ now().year }} Жубанов Университет | Все права защищены</p>
+        <p>© 2025 | Жубанов Университет | Все права защищены</p>
     </footer>
 
 </body>
