--- a/templates/base.html
+++ b/templates/base.html
@@ -7,7 +7,8 @@
     <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
     <link href="https://fonts.googleapis.com/css2?family=Kaushan+Script&family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
 </head>
-<body style="font-family: 'Roboto', sans-serif; font-size: 16px; color: #000000; margin: 0;">
+<body style="display: flex; flex-direction: column; min-height: 100vh; font-family: 'Roboto', sans-serif; font-size: 16px; color: #000000; margin: 0;">
+
 
     <!-- Navigation Bar -->
     <nav class="navbar" style="display: flex; justify-content: space-between; align-items: center; padding: 10px 20px; background-color: #f8f9fc;">
