--- a/templates/base.html
+++ b/templates/base.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
     <link href="https://fonts.googleapis.com/css2?family=Kaushan+Script&family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
 </head>
-<body style="display: flex; flex-direction: column; min-height: 100vh; font-family: 'Roboto', sans-serif; font-size: 16px; color: #000000; margin: 0;">
+<body style="font-family: 'Roboto', sans-serif; font-size: 16px; color: #000000; margin: 0;">
 
 
     <!-- Navigation Bar -->
