--- a/templates/index.html
+++ b/templates/index.html
@@ -8,12 +8,12 @@
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
 </head>
 <body>
+    <div class="lang-switcher" style="position: absolute; top: 10px; left: 20px;">
+        <a href="?lang=ru">🇷🇺</a> |
+        <a href="?lang=kk">kz</a>
+    </div>     
     <div class="theme-toggle" style="position: absolute; top: 10px; right: 20px;">
-        <input type="checkbox" id="theme-toggle-checkbox">
-        <label for="theme-toggle-checkbox" class="toggle-label">
-            <span class="sun">🌞</span>
-            <span class="moon">🌙</span>
-        </label>
+        <input type="checkbox" id="theme-toggle-checkbox">   
     </div>
     <div class="container">
         <div class="form-box login">
