Добавил gunicorn в зависимости

--- a/templates/admin_calendar.html
+++ b/templates/admin_calendar.html
@@ -1,9 +1,9 @@
 {% extends "base.html" %}
 
-{% block title %}{{ _('Календарь') }}{% endblock %}
+{% block title %}Календарь{% endblock %}
 
 {% block content %}
-<h1 style="text-align: center; font-family: 'Kaushan Script', cursive; margin-bottom: 20px;">{{ _('Календарь заявок') }}</h1>
+<h1 style="text-align: center; font-family: 'Kaushan Script', cursive; margin-bottom: 20px;">Календарь заявок</h1>
 <div id="calendar" style="height: 100%; padding: 20px; background: #f9f9f9; border-radius: 10px; box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);"></div>
 
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/fullcalendar@5.11.3/main.min.css">
