--- a/templates/my_history.html
+++ b/templates/my_history.html
@@ -1,18 +1,18 @@
 {% extends "base.html" %}
 
-{% block title %}{{ _('История заявок') }}{% endblock %}
+{% block title %}История заявок{% endblock %}
 
 {% block content %}
-<h1 style="text-align: center; margin-bottom: 20px;">{{ _('История заявок ') }}</h1>
+<h1 style="text-align: center; margin-bottom: 20px;">История заявок</h1>
 <table style="width: 100%; border-collapse: collapse; text-align: left;">
     <thead>
         <tr>
-            <th>{{ _('Тип ') }}</th>
-            <th>{{ _('Описание ') }}</th>
-            <th>{{ _('Дата ') }}</th>
-            <th>{{ _('Статус ') }}</th>
-            <th>{{ _('Комментарий ') }}</th>
-            <th>{{ _('Оценка ') }}</th>
+            <th>Тип</th>
+            <th>Описание</th>
+            <th>Дата</th>
+            <th>Статус</th>
+            <th>Комментарий</th>
+            <th>Оценка</th>
         </tr>
     </thead>
     <tbody>
