--- a/templates/profile_admin.html
+++ b/templates/profile_admin.html
@@ -1,16 +1,17 @@
 {% extends "base.html" %}
 
-{% block title %}{{ _('Профиль администратора') }}{% endblock %}
+{% block title %}Профиль администратора{% endblock %}
 
 {% block content %}
-<div style="display: flex; justify-content: center; align-items: center; height: 100vh; margin: 0;">
+<div style="display: flex; justify-content: center; align-items: center; height: 100%;">
     <div class="profile-card">
         <div class="profile-photo">
-            <img src="{{ url_for('uploaded_file', filename=user.photo) if user.photo else url_for('static', filename='default-profile.png') }}" alt="Фото профиля">
+            <img src="{{ url_for('static', filename='uploads/' + user.photo) if user.photo else url_for('static', filename='default-profile.png') }}" alt="Фото профиля">
         </div>
         <h2 class="profile-name">{{ user.full_name }}</h2>
-        <p class="profile-field"><i class='bx bxs-envelope'></i>Email: {{ user.email }}</p>
-        <p class="profile-field"><i class='bx bxs-user'></i>Роль: Администратор</p>
+        <p class="profile-field"><i class='bx bxs-school'></i> Факультет: {{ user.faculty }}</p>
+        <p class="profile-field"><i class='bx bxs-briefcase'></i> Должность: {{ user.position }}</p>
+        <p class="profile-field"><i class='bx bxs-envelope'></i> Email: {{ user.email }}</p>
         <a href="/profile/edit" class="btn styled-btn">Редактировать профиль</a>
     </div>
 </div>
