--- a/templates/admin.html
+++ b/templates/admin.html
@@ -5,7 +5,7 @@
 {% block content %}
 <h1 style="text-align: center; font-family: 'Kaushan Script', cursive; margin-bottom: 20px;">Панель управления</h1>
 <!-- Панель фильтров -->
-<form id="filter-form" style="display: flex;  gap: 15px; margin-bottom: 20px; align-items: center;">
+<form id="filter-form" class="filter-form">
     <select id="filter-type" class="input-box styled-dropdown" style="flex: 1;">
         <option value="">Все типы</option>
         <option value="Картридж Canon 737">Картридж Canon 737</option>
