--- a/templates/admin_users.html
+++ b/templates/admin_users.html
@@ -30,4 +30,14 @@
             </tbody>
         </table>
     </div>
+    <style>
+        @media (max-width: 768px) {
+            table {
+                font-size: 14px;
+            }
+            th, td {
+                padding: 8px;
+            }
+        }
+    </style>
 {% endblock %}
