--- a/templates/employee.html
+++ b/templates/employee.html
@@ -47,6 +47,17 @@
     <button type="submit" class="btn styled-btn">Отправить</button>
 </form>
 
+<style>
+    @media (max-width: 768px) {
+        form {
+            padding: 10px;
+        }
+        .input-box, .btn {
+            font-size: 14px;
+        }
+    }
+</style>
+
 <script>
     document.addEventListener('DOMContentLoaded', function () {
         const fileInput = document.getElementById('file-input');
