--- a/templates/admin_calendar.html
+++ b/templates/admin_calendar.html
@@ -5,6 +5,13 @@
 {% block content %}
 <h1 style="text-align: center; font-family: 'Kaushan Script', cursive; margin-bottom: 20px;">Календарь заявок</h1>
 <div id="calendar" style="height: 100%; padding: 20px; background: #f9f9f9; border-radius: 10px; box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);"></div>
+<style>
+    @media (max-width: 768px) {
+        #calendar {
+            padding: 10px;
+        }
+    }
+</style>
 
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/fullcalendar@5.11.3/main.min.css">
 <script src="https://cdn.jsdelivr.net/npm/fullcalendar@5.11.3/main.min.js"></script>
