--- a/templates/index.html
+++ b/templates/index.html
@@ -25,7 +25,7 @@
         <input type="checkbox" id="theme-toggle-checkbox">   
     </div>
     <div class="container">
-        <div class="mobile-switcher">
+        <div element class="mobile-switcher">
             <button class="btn login-btn">Вход</button>
             <button class="btn register-btn">Регистрация</button>
         </div>        
